--- a/.travis.yml
+++ b/.travis.yml
@@ -30,13 +30,13 @@ before_install:
 
 before_script:
   # required for building the website docs
-  - (cd website && npm install && npm install gulp && which gulp)
-  - wget -q https://github.com/spf13/hugo/releases/download/v0.15/hugo_0.15_amd64.deb
-  - sudo dpkg -i hugo*.deb
-  - hugo version
-  - pip install --user requests==2.9.0
-  - pip install --user LinkChecker
-  - linkchecker --version
+  #- (cd website && npm install && npm install gulp && which gulp)
+  #- wget -q https://github.com/spf13/hugo/releases/download/v0.15/hugo_0.15_amd64.deb
+  #- sudo dpkg -i hugo*.deb
+  #- hugo version
+  #- pip install --user requests==2.9.0
+  #- pip install --user LinkChecker
+  #- linkchecker --version
 
 script:
   - which gcc-4.8
@@ -44,3 +44,4 @@ script:
   - which g++-4.8
   - g++ --version
   - scripts/travis/ci.sh
+
