Still working on integration test

--- a/integration-test/src/python/test_runner/resources/test.conf
+++ b/integration-test/src/python/test_runner/resources/test.conf
@@ -4,7 +4,7 @@
   "role" : "dummy_role",
   "env" : "dummy_env",
   "resultsServerPort" : "80",
-  "topologyClasspathPrefix" : "com.twitter.heron.integration_test.topology.",
+  "topologyClasspathPrefix" : "",
   "releasePackageUri" : "scheme://role/name/version",
   "topologies": [
     {
